src/content/docs/versions/ts-sdk/0.2.x/overview.mdx
---
title: TypeScript SDK
slug: ts-sdk/0.2.x/ts-sdk/overview
---

import { Aside, Code } from '@astrojs/starlight/components';

TypeScript SDK is a library that provides a set of React components, hooks, and utility functions you can use to control how Smelter manipulates videos. In this section, we'll briefly describe its interface so you can get the general impression of how to process multimedia using Smelter TypeScript SDK.

### Smelter

The primary element required to start using the Smelter TypeScript SDK is the `Smelter` class. This class is crucial for initializing and managing the Smelter server instance. You can import `Smelter` class from:

* `@swmansion/smelter-node`
* `@swmansion/smelter-web-wasm`

Visit [`Smelter` class documentation](/ts-sdk/0.2.x/smelter) for more details, or for [offline processing](/fundamentals/glossary#offline-processing) checkout [`OfflineSmelter` class](/ts-sdk/0.2.x/smelter-offline).

### Components

Smelter TypeScript SDK draws heavy inspiration from React Native in terms of the syntax. It's important to note that standard DOM components, such as `<div/>`, are not supported. Instead, you should use Smelter-specific components, such as:

* [Image](/ts-sdk/0.2.x/components/image)
* [InputStream](/ts-sdk/0.2.x/components/inputstream)
* [Mp4](/ts-sdk/0.2.x/components/mp4)
* [Rescaler](/ts-sdk/0.2.x/components/rescaler)
* [Shader](/ts-sdk/0.2.x/components/shader)
* [Show](/ts-sdk/0.2.x/components/show)
* [SlideShow](/ts-sdk/0.2.x/components/slideshow)
* [Text](/ts-sdk/0.2.x/components/text)
* [Tiles](/ts-sdk/0.2.x/components/tiles)
* [View](/ts-sdk/0.2.x/components/view)
* [WebView](/ts-sdk/0.2.x/components/webview)

#### Styling

Smelter components can be customized in a way similar to React inline styling. Most of the components accept `style` prop - an object defining custom visual aspects. However, some of the animation-related customizations, such as `transition` are handled by specific dedicated props.

<Aside type="caution">Despite some of the component names overlapping with React Native, the supported styles differ. Visit a specific component section to see supported styles.</Aside>

### Hooks

Our hooks are primarily designed for managing stream configurations and accessing information about them. Smelter currently offers following hooks:

* [useInputStreams](/ts-sdk/0.2.x/hooks/use-input-streams)
* [useAudioInput](/ts-sdk/0.2.x/hooks/use-audio-input)
* [useAfterTimestamp](/ts-sdk/0.2.x/hooks/use-after-timestamp)
* [useBlockingTask](/ts-sdk/0.2.x/hooks/use-blocking-task)

You're free to use any standard React hooks such as `useState`, `useEffect`, and more.

### Inputs

You can handle most of the stream composing by using React components. However, delivering multimedia to Smelter requires registering the input beforehand. You can register an input by using [Smelter.registerInput](/ts-sdk/0.2.x/smelter#registerinput), which accepts `inputId` and object representing input configurations. Supported inputs depend on the runtime.

Node.js:

* [MP4](/ts-sdk/0.2.x/inputs/mp4)
* [RTP](/ts-sdk/0.2.x/inputs/rtp)
* [WHIP](/ts-sdk/0.2.x/inputs/whip)

Browser (WASM):

* [Camera (Web API)](/ts-sdk/0.2.x/inputs/wasm-camera)
* [Screen capture (Web API)](/ts-sdk/0.2.x/inputs/wasm-screen)
* [MediaStream (Web API)](/ts-sdk/0.2.x/inputs/wasm-stream)
* [MP4](/ts-sdk/0.2.x/inputs/mp4) (limited API compared to Node.js)

After registering the stream, you can use it in composition by using [InputStream](/ts-sdk/0.2.x/components/inputstream) component.

<Code code={`<InputStream inputId="example_input" />`} lang="tsx" />

### Outputs

Similar to inputs, outputs require registering them before they can be utilized. You can register an output by using `Smelter.registerOutput`.

Node.js:

* [MP4](/ts-sdk/0.2.x/outputs/mp4)
* [RTP](/ts-sdk/0.2.x/outputs/rtp)
* [WHIP](/ts-sdk/0.2.x/outputs/whip)

Browser (WASM)

* [Canvas (Web APi)](/ts-sdk/0.2.x/outputs/wasm-canvas)
* [MediaStream (Web API)](/ts-sdk/0.2.x/outputs/wasm-stream)
* [WHIP (Web API)](/ts-sdk/0.2.x/outputs/wasm-whip)

### Resources

Other than inputs and outputs Smelter supports a few other entity types that need to be registered.

* [Shader](/ts-sdk/0.2.x/resources/shader)
* [Image](/ts-sdk/0.2.x/resources/image)
* [WebRenderer](/ts-sdk/0.2.x/resources/web-renderer)
